--- a/Wikipedia/Code/EditSaveViewController.storyboard
+++ b/Wikipedia/Code/EditSaveViewController.storyboard
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7fI-DJ-2eF" userLabel="Scroll Container">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="602"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="bAX-n7-9aq">
-                                                <rect key="frame" x="16" y="0.0" width="343" height="583"/>
+                                                <rect key="frame" x="16" y="0.0" width="343" height="582"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="H2h-I4-15C">
                                                         <rect key="frame" x="0.0" y="0.0" width="343" height="163"/>
@@ -60,20 +60,20 @@
                                                         </constraints>
                                                     </containerView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="h78-uR-o9i">
-                                                        <rect key="frame" x="0.0" y="257" width="343" height="191"/>
+                                                        <rect key="frame" x="0.0" y="257" width="343" height="190"/>
                                                         <subviews>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4lL-3a-u6s" userLabel="Divider view">
+                                                                <rect key="frame" x="0.0" y="0.0" width="343" height="1"/>
+                                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="1" id="IzE-m5-Ivu"/>
+                                                                </constraints>
+                                                            </view>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3B6-yA-KKL" userLabel="Minor Edit Stack View">
-                                                                <rect key="frame" x="0.0" y="0.0" width="343" height="46"/>
+                                                                <rect key="frame" x="0.0" y="17" width="343" height="37"/>
                                                                 <subviews>
-                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4lL-3a-u6s" userLabel="Divider view">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="343" height="1"/>
-                                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                        <constraints>
-                                                                            <constraint firstAttribute="height" constant="1" id="IzE-m5-Ivu"/>
-                                                                        </constraints>
-                                                                    </view>
-                                                                    <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="999" translatesAutoresizingMaskIntoConstraints="NO" id="YgV-Kg-IXp">
-                                                                        <rect key="frame" x="0.0" y="9" width="343" height="37"/>
+                                                                    <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="999" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="YgV-Kg-IXp">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="343" height="37"/>
                                                                         <subviews>
                                                                             <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="999" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="NvK-2d-NGU">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="294" height="37"/>
@@ -98,7 +98,7 @@
                                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             </stackView>
                                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Wq7-Dh-cIU">
-                                                                                <rect key="frame" x="294" y="0.0" width="51" height="37"/>
+                                                                                <rect key="frame" x="294" y="3" width="51" height="31"/>
                                                                             </switch>
                                                                         </subviews>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -107,17 +107,10 @@
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </stackView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Y6O-Zr-ZAJ">
-                                                                <rect key="frame" x="0.0" y="62" width="343" height="46"/>
+                                                                <rect key="frame" x="0.0" y="70" width="343" height="37"/>
                                                                 <subviews>
-                                                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yKe-aH-xxx" userLabel="Divider view">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="343" height="1"/>
-                                                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                        <constraints>
-                                                                            <constraint firstAttribute="height" constant="1" id="QMi-Xs-agp"/>
-                                                                        </constraints>
-                                                                    </view>
-                                                                    <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="999" translatesAutoresizingMaskIntoConstraints="NO" id="l63-r5-hhG">
-                                                                        <rect key="frame" x="0.0" y="9" width="343" height="37"/>
+                                                                    <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="999" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="l63-r5-hhG">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="343" height="37"/>
                                                                         <subviews>
                                                                             <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="999" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="0k3-qz-JG7">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="294" height="37"/>
@@ -142,7 +135,7 @@
                                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                             </stackView>
                                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FAR-zq-Bq9">
-                                                                                <rect key="frame" x="294" y="0.0" width="51" height="37"/>
+                                                                                <rect key="frame" x="294" y="3" width="51" height="31"/>
                                                                             </switch>
                                                                         </subviews>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -151,14 +144,14 @@
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </stackView>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKQ-rD-xWx" userLabel="Divider view">
-                                                                <rect key="frame" x="0.0" y="124" width="343" height="1"/>
+                                                                <rect key="frame" x="0.0" y="123" width="343" height="1"/>
                                                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="DPy-ju-0C2"/>
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="WlM-ym-7FV" userLabel="Show Web Preview Container View">
-                                                                <rect key="frame" x="0.0" y="141" width="343" height="50"/>
+                                                                <rect key="frame" x="0.0" y="140" width="343" height="50"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="43" id="xGD-rl-0ae"/>
                                                                 </constraints>
@@ -167,7 +160,7 @@
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fkw-Jb-kWn">
-                                                        <rect key="frame" x="0.0" y="470" width="343" height="113"/>
+                                                        <rect key="frame" x="0.0" y="469" width="343" height="113"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZbI-A8-0p9">
                                                                 <rect key="frame" x="34.5" y="16" width="274" height="81"/>
@@ -269,16 +262,14 @@
                         <outlet property="showWebPreviewContainerView" destination="WlM-ym-7FV" id="SCH-bG-HZA"/>
                         <outlet property="spacerAboveBottomDividerHeightConstrait" destination="KMF-oz-mp8" id="DBg-T4-bYc"/>
                         <outlet property="stackView" destination="bAX-n7-9aq" id="CYr-hu-DaT"/>
-                        <outletCollection property="dividerHeightConstraits" destination="QMi-Xs-agp" collectionClass="NSMutableArray" id="tPK-zF-iWs"/>
-                        <outletCollection property="dividerHeightConstraits" destination="IzE-m5-Ivu" collectionClass="NSMutableArray" id="ysr-l5-32n"/>
-                        <outletCollection property="dividerViews" destination="yKe-aH-xxx" collectionClass="NSMutableArray" id="kqT-hD-bP9"/>
-                        <outletCollection property="dividerViews" destination="4lL-3a-u6s" collectionClass="NSMutableArray" id="paH-Ge-UGx"/>
                         <outletCollection property="dividerViews" destination="hKQ-rD-xWx" collectionClass="NSMutableArray" id="gBD-PN-sYk"/>
                         <outletCollection property="dividerHeightConstraits" destination="DPy-ju-0C2" collectionClass="NSMutableArray" id="rRm-At-WUU"/>
                         <outletCollection property="textViews" destination="JeI-SY-JgQ" collectionClass="NSMutableArray" id="jMG-2q-Qj5"/>
                         <outletCollection property="dividerHeightConstraits" destination="62E-DT-zBt" collectionClass="NSMutableArray" id="xby-Q0-UGd"/>
                         <outletCollection property="textViews" destination="ajI-ie-t0i" collectionClass="NSMutableArray" id="GoB-1T-ZYf"/>
                         <outletCollection property="dividerViews" destination="6Td-fr-eA2" collectionClass="NSMutableArray" id="INK-2C-bcY"/>
+                        <outletCollection property="dividerHeightConstraits" destination="IzE-m5-Ivu" collectionClass="NSMutableArray" id="ysr-l5-32n"/>
+                        <outletCollection property="dividerViews" destination="4lL-3a-u6s" collectionClass="NSMutableArray" id="paH-Ge-UGx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lKe-tq-9vz" userLabel="First Responder" sceneMemberID="firstResponder"/>
