--- a/Wikipedia/Code/ScrollableEducationPanelView.xib
+++ b/Wikipedia/Code/ScrollableEducationPanelView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,6 +26,7 @@
                 <outlet property="inlineCloseButtonStackView" destination="Evj-R4-67a" id="Jxf-XH-9AE"/>
                 <outlet property="inlineOptionalButton" destination="oeh-qo-2Gj" id="UAw-Du-a2A"/>
                 <outlet property="inlinePrimaryButton" destination="cUm-ox-sR8" id="qTB-br-DAp"/>
+                <outlet property="inlinePrimaryButtonSpinner" destination="mGT-rc-9wM" id="yVS-if-fkZ"/>
                 <outlet property="inlineSecondaryButton" destination="hB2-ah-QwX" id="qKA-ng-WZB"/>
                 <outlet property="pinnedActionButtonContainerView" destination="3hr-CH-OgV" id="zwG-PG-2bK"/>
                 <outlet property="pinnedCloseButton" destination="dnI-9Q-77X" id="HVu-U0-qk1"/>
@@ -199,11 +200,16 @@
                                                 </stackView>
                                             </subviews>
                                         </stackView>
+                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="mGT-rc-9wM">
+                                            <rect key="frame" x="130" y="304" width="20" height="20"/>
+                                        </activityIndicatorView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="1lp-Zw-jU3" firstAttribute="leading" secondItem="BhM-b3-oKp" secondAttribute="leading" id="0yH-Xa-j7U"/>
                                         <constraint firstAttribute="bottom" secondItem="1lp-Zw-jU3" secondAttribute="bottom" constant="30" id="36G-Hn-CX2"/>
                                         <constraint firstItem="1lp-Zw-jU3" firstAttribute="top" secondItem="BhM-b3-oKp" secondAttribute="top" constant="16" id="Dz1-uW-1wr"/>
+                                        <constraint firstItem="cUm-ox-sR8" firstAttribute="centerX" secondItem="mGT-rc-9wM" secondAttribute="centerX" id="Gej-X6-4Ak"/>
+                                        <constraint firstItem="cUm-ox-sR8" firstAttribute="centerY" secondItem="mGT-rc-9wM" secondAttribute="centerY" id="Pgu-IH-Aqw"/>
                                         <constraint firstAttribute="trailing" secondItem="1lp-Zw-jU3" secondAttribute="trailing" id="iIa-RA-cEv"/>
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
@@ -377,7 +383,7 @@
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
